# just-bash

./: CLAUDE.md  Cargo.toml  MIGRATION_SUMMARY.md  MIGRATION_TRACKER.md  README.md  README.zh-CN.md
docs/plans/: 2026-02-06-awk-command-impl.md  2026-02-06-commands-batch-a-design.md  2026-02-06-commands-batch-a-impl.md  2026-02-06-commands-batch-b-impl.md  2026-02-06-sed-command-impl.md  2026-02-06-ts-rust-migration-fixes.md  2026-02-07-batch-c-impl.md  2026-02-07-batch-c-jq-yq-design.md  2026-02-07-batch-d-impl.md  2026-02-09-phase3-auxiliary-modules.md  2026-02-09-phase4-interface-layer.md  migration-roadmap.md  phase1-detailed-plan.md
src/: bash.rs  lib.rs  main.rs
src/ast/: mod.rs  types.rs
src/commands/: alias_cmd.rs  bash_cmd.rs  clear_cmd.rs  column_cmd.rs  comm_cmd.rs  du_cmd.rs  expand_cmd.rs  expr_cmd.rs  file_cmd.rs  fold_cmd.rs  help_cmd.rs  history_cmd.rs  hostname_cmd.rs  html_to_markdown_cmd.rs  mod.rs  od_cmd.rs  readlink_cmd.rs  registry.rs  rev_cmd.rs  rg_cmd.rs  rmdir_cmd.rs  strings_cmd.rs  tac_cmd.rs  time_cmd.rs  timeout_cmd.rs  tree_cmd.rs  true_cmd.rs  types.rs  unalias_cmd.rs  which_cmd.rs  whoami_cmd.rs  xan_cmd.rs
src/fs/: in_memory_fs.rs  mod.rs  types.rs
src/interpreter/: alias_expansion.rs  arithmetic.rs  assignment_expansion.rs  builtin_dispatch.rs  command_resolution.rs  conditionals.rs  control_flow.rs  errors.rs  execution_engine.rs  functions.rs  interpreter.rs  mod.rs  pipeline_execution.rs  redirections.rs  simple_command_assignments.rs  subshell_group.rs  sync_fs_adapter.rs  type_command.rs  types.rs  word_expansion.rs
(+179 files in other folders)
