[package]
name = "just-bash"
version = "0.1.0"
edition = "2021"

[lib]
name = "just_bash"
path = "src/lib.rs"

[[bin]]
name = "just-bash"
path = "src/main.rs"

[dependencies]
thiserror = "1.0"
lazy_static = "1.4"
regex-lite = "0.1"
chrono = "0.4"
rand = "0.8"
libc = "0.2"
glob = "0.3"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "macros"] }
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
csv = "1"
indexmap = "2"
base64 = "0.22"
flate2 = "1.0"
similar = "2.6"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
